# embassy-multi-target-example

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: main.rs
